--- a/src/main/Resource/log4j.properties
+++ b/src/main/Resource/log4j.properties
@@ -1,6 +1,6 @@
 #下面定义日志输出级别是 INFO，并且配置了2个输出目的地，一个是A3，一个是console
 
-log4j.rootLogger = info,CONSOLE
+log4j.rootLogger = info,CONSOLE,file
 log4j.addivity.org.apache=true
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
@@ -9,4 +9,12 @@ log4j.appender.CONSOLE.Encoding=GBK
 log4j.appender.CONSOLE.Target=System.out
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=[userInfo] %d - %c  [%t] %-5p  %m%n
-#log4j.appender.CONSOLE.layout.ConversionPattern=[start]%d{DATE}[DATE]%n%p[PRIORITY]%n%x[NDC]%n%t[THREAD] n%c[CATEGORY]%n%m[MESSAGE]%n%n
+
+
+#设定文件
+log4j.appender.file=org.apache.log4j.RollingFileAppender
+log4j.appender.file.File=E:/output.log
+log4j.appender.file.MaxFileSize=10MB
+log4j.appender.file.MaxBackupIndex=1
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.filelayout.ConversionPattern=[userInfo] %d - %c  [%t] %-5p  %m%n
